--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
 	    		<ul class="tabs">
 <!-- 				style="background-color:rgb(252, 252, 252);" -->
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About Me</a></li>
-				<li><a href="/education">Education</a></li>
-	        		<li><a href="/cv">CV</a></li>
+		        	<li><a href="/about">About</a></li>
+<!-- 				<li><a href="/education">Education</a></li> -->
+<!-- 	        		<li><a href="/cv">CV</a></li> -->
 				<li><a href="/projects">Project</a></li>
-				<li><a href="/internships">Internship</a></li>
+<!-- 				<li><a href="/internships">Internship</a></li> -->
 				<li><a href="/seminar">Seminar</a></li>
 				<li><a href="/honours">Honours</a></li>
 				
