--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
 <!-- 				style="background-color:rgb(252, 252, 252);" -->
 	        		<li><a href="/">Home</a></li>
 				<li><a href="/honours">Honours</a></li>
-				<li><a href="/projects">Project</a></li>
-				<li><a href="/seminar">Seminar</a></li>
+				<li><a href="/projects">Projects</a></li>
+				<li><a href="/seminar">Seminars</a></li>
 		        	<li><a href="/about">About</a></li>
 <!-- 				<li><a href="/education">Education</a></li> -->
 <!-- 	        		<li><a href="/cv">CV</a></li> -->
