--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <!-- 				style="background-color:rgb(252, 252, 252);" -->
 	        		<li><a href="/">Home</a></li>
 				<li><a href="/honours">Honours</a></li>
-				<li><a href="/Research">Projects</a></li>
+				<li><a href="/projects">Research Area</a></li>
 				<li><a href="/seminar">Seminars</a></li>
 		        	<li><a href="/about">About</a></li>
 <!-- 				<li><a href="/education">Education</a></li> -->
